--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@awesome-cordova-plugins/core": "^6.2.0",
     "@awesome-cordova-plugins/in-app-browser": "^5.43.0",
     "@capacitor/app": "1.1.0",
     "@capacitor/core": "3.4.1",
+    "@capacitor/geolocation": "^4.0.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/splash-screen": "^4.1.1",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
     "@craco/craco": "^6.4.3",
@@ -16,7 +19,7 @@
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@ramenx/ionic-template-generator": "latest",
-    "@ramenx/ui-library": "latest",
+    "@ramenx/ui-library": "1.0.10",
     "@team_eureka/eureka-ionic-core": "^1.0.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -33,6 +36,7 @@
     "ionicons": "^5.4.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-customizable-progressbar": "^1.2.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
