--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@awesome-cordova-plugins/core": "^6.2.0",
     "@awesome-cordova-plugins/in-app-browser": "^5.43.0",
+    "@capacitor/android": "^4.4.0",
     "@capacitor/app": "1.1.0",
     "@capacitor/core": "3.4.1",
     "@capacitor/geolocation": "^4.0.1",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "^4.4.0",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/splash-screen": "^4.1.1",
     "@capacitor/status-bar": "1.0.8",
