update version ui library

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@ramenx/ionic-template-generator": "latest",
-    "@ramenx/ui-library": "1.0.10",
+    "@ramenx/ui-library": "1.0.24",
     "@team_eureka/eureka-ionic-core": "^1.0.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -31,6 +31,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.26.0",
+    "minify-css-string": "^1.0.0",
     "react": "^18.2.0",
     "react-customizable-progressbar": "^1.2.0",
     "react-dom": "^18.2.0",
