--- a/package.json
+++ b/package.json
@@ -61,13 +61,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "craco eject",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "browserslist": {
     "production": [
@@ -84,10 +79,17 @@
   "devDependencies": {
     "@capacitor/cli": "4.4.0",
     "@types/gulp": "^4.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "craco-sass-resources-loader": "^1.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
     "gulp": "^4.0.2",
     "plop-pack-npm-install-packages": "0.0.3",
-    "postcss": "8.4.6"
+    "postcss": "8.4.6",
+    "prettier": "^2.8.1"
   },
   "description": "An Ionic project"
 }
