--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.4.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@types/gulp": "^4.0.9",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
@@ -88,10 +90,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "gulp": "^4.0.2",
+    "husky": "^8.0.0",
     "plop-pack-npm-install-packages": "0.0.3",
     "postcss": "8.4.6",
-    "prettier": "^2.8.1",
-    "husky": "^8.0.0"
+    "prettier": "^2.8.1"
   },
   "description": "An Ionic project"
 }
