--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@awesome-cordova-plugins/core": "^6.2.0",
-    "@awesome-cordova-plugins/in-app-browser": "^5.43.0",
-    "@capacitor/android": "^4.6.1",
-    "@capacitor/app": "4.1.0",
-    "@capacitor/core": "4.4.0",
-    "@capacitor/geolocation": "^4.0.1",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/ios": "^4.6.1",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/splash-screen": "^4.1.1",
-    "@capacitor/status-bar": "4.0.1",
+    "@awesome-cordova-plugins/core": "^5.41.0",
+    "@awesome-cordova-plugins/in-app-browser": "^5.41.0",
+    "@capacitor/android": "^3.5.1",
+    "@capacitor/app": "1.1.0",
+    "@capacitor/core": "^3.5.0",
+    "@capacitor/geolocation": "^1.3.1",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "^3.5.1",
+    "@capacitor/keyboard": "1.2.2",
+    "@capacitor/splash-screen": "^1.2.2",
+    "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
     "@craco/craco": "^6.4.3",
     "@ionic/react": "^6.0.0",
