--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@awesome-cordova-plugins/core": "^6.2.0",
     "@awesome-cordova-plugins/in-app-browser": "^5.43.0",
+    "@capacitor-community/fcm": "^2.0.0",
     "@capacitor/android": "^4.6.1",
     "@capacitor/app": "4.1.0",
     "@capacitor/core": "4.4.0",
@@ -12,6 +13,7 @@
     "@capacitor/haptics": "4.0.1",
     "@capacitor/ios": "^4.6.1",
     "@capacitor/keyboard": "4.0.1",
+    "@capacitor/push-notifications": "^4.1.2",
     "@capacitor/splash-screen": "^4.1.1",
     "@capacitor/status-bar": "4.0.1",
     "@capacitor/storage": "^1.2.5",
